[gd_scene load_steps=10 format=3 uid="uid://iepj63r3yt31"]

[ext_resource type="Script" path="res://cop.gd" id="1_u4vm7"]
[ext_resource type="Texture2D" uid="uid://h10v34vfnysc" path="res://assests/Cop._Demo.png" id="2_8jdol"]
[ext_resource type="Texture2D" uid="uid://cjd3uwhajuf7e" path="res://assests/Cop Stunned F1.png" id="3_knt5f"]
[ext_resource type="Texture2D" uid="uid://x71affs0ec6n" path="res://assests/Cop Stunned F2.png" id="4_2xyhi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbd5q"]
size = Vector2(102, 247)

[sub_resource type="SpriteFrames" id="SpriteFrames_apku0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8jdol")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8jdol")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_knt5f")
}, {
"duration": 1.0,
"texture": ExtResource("4_2xyhi")
}],
"loop": true,
"name": &"Stunned",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yc4g5"]
size = Vector2(2170, 287)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2reyi"]
size = Vector2(530, 250)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cmqe0"]
size = Vector2(848, 269)

[node name="cop" type="CharacterBody2D" groups=["Enemies"]]
collision_mask = 7
script = ExtResource("1_u4vm7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, 17.5)
shape = SubResource("RectangleShape2D_tbd5q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 0)
scale = Vector2(0.142418, 0.142418)
sprite_frames = SubResource("SpriteFrames_apku0")
animation = &"Stunned"
autoplay = "Idle"

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
visible = false
position = Vector2(21, 11.5)
shape = SubResource("RectangleShape2D_yc4g5")
debug_color = Color(1, 0.856667, 0.14, 0.027451)

[node name="RunAway" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RunAway"]
visible = false
position = Vector2(-21, 6)
shape = SubResource("RectangleShape2D_2reyi")
debug_color = Color(1, 0.856667, 0.14, 0.027451)

[node name="Stop" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stop"]
visible = false
position = Vector2(-10, 8.5)
shape = SubResource("RectangleShape2D_cmqe0")
debug_color = Color(1, 0.856667, 0.14, 0.027451)

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 3.0

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(-14, -101)

[node name="StunTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LeftEdge" type="RayCast2D" parent="."]
position = Vector2(-65, 110)
collision_mask = 3

[node name="RightEdge" type="RayCast2D" parent="."]
position = Vector2(53, 113)
collision_mask = 3

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="RunAway" to="." method="_on_run_away_body_entered"]
[connection signal="body_exited" from="RunAway" to="." method="_on_run_away_body_exited"]
[connection signal="body_entered" from="Stop" to="." method="_on_stop_body_entered"]
[connection signal="body_exited" from="Stop" to="." method="_on_stop_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
